# paper-distiller

./: .env.example  CHANGELOG.md  README.md  pyproject.toml  wiki_store.py
.github/workflows/: release.yml
docs/: ARCHITECTURE.md
docs/superpowers/plans/: 2026-04-16-factor-conditional-generation.md  2026-05-18-paper-distiller-v0.3.0.md  2026-05-18-paper-distiller-v0.5.0.md  2026-05-19-paper-distiller-v1.1-plan5-deep-research.md  2026-05-22-phase5-cross-paper-linker.md  2026-05-22-phase6-review-agent.md
docs/superpowers/specs/: 2026-05-18-paper-distiller-v0.3.0-design.md  2026-05-18-paper-distiller-v0.5.0-design.md
examples/: README-examples.md  example.env
experiments/phase2_interdiff_fts/: diffusion.py  sample.py  train.py
scripts/: diag_proof_store.py  eval_reviewer.py
src/paper_distiller/: __init__.py  _pricing_helper.py  cli.py  config.py  pipeline.py
src/paper_distiller/agents/: curation.py  dedup.py  gap_detector.py  opencli_openalex.py  processor.py  rate_limit.py  renderer.py  router.py  searchers.py
src/paper_distiller/agents/prompts/: gap.md  route.md
src/paper_distiller/arxiv_local/: __init__.py  bootstrap.py  cli.py  incremental.py  oai_record.py  store.py
src/paper_distiller/chat/: agent_loop.py  agent_tools.py  cli.py  history.py  permissions.py  slash_commands.py  ui.py
src/paper_distiller/chat/repl/: __init__.py  commands.py  helpers.py  loop.py
src/paper_distiller/llm/: __init__.py  openai_compatible.py
src/paper_distiller/prompts/: article.md  filter.md  survey.md
src/paper_distiller/proofgraph/: extraction_schema.py  pipeline.py  reviewer.py
src/paper_distiller/proofgraph/prompts/: review_node.md
src/paper_distiller/proofs/: store.py
src/paper_distiller/qa/: reflection.py  research_state.py
src/paper_distiller/qa/prompts/: reflect.md
src/paper_distiller/sources/: __init__.py  semantic_scholar.py
src/paper_distiller/vault/: html_render.py  store.py
src/paper_distiller/web/: __init__.py  agent_stream.py  cli.py  server.py
src/paper_distiller/web/routes/: chat.py  config.py  health.py  vault.py
src/paper_distiller/web/static/: paper-distiller.jsx
tests/: conftest.py  test_agent_loop.py  test_agent_tools.py  test_config.py  test_history.py  test_llm.py  test_permissions.py  test_pipeline.py  test_qa_reflection.py  test_rate_limit.py  test_semantic_scholar.py  test_slash_commands.py  test_smoke.py  test_vault_html.py  test_vault_store.py
tests/agents/: test_dedup.py  test_gap_detector.py  test_processor.py  test_router.py  test_searchers.py
tests/arxiv_local/: test_bootstrap.py  test_cli.py  test_incremental.py  test_store.py
tests/chat/: test_ask_cli.py  test_browse_cli.py  test_commands.py  test_helpers.py  test_repl_cli.py  test_repl_loop.py  test_research_cli.py
tests/integration/: test_ask_e2e.py
tests/proofgraph/: test_extraction_schema.py  test_pipeline.py  test_reviewer.py
tests/proofs/: test_store.py
tests/qa/: test_research_state.py
tests/web/: test_chat_stream.py  test_server_starts.py
tools/: wiki_tool.py
wiki/_templates/: article-theory.md  author.md
wiki/articles/: boosting-with-synthetic-pretrained.md  characteristic-learning-one-step-generation.md  cnf-convergence-distribution-learning.md  conditional-follmer-flow-distribution-learning.md  conditional-stochastic-interpolation.md  diffusion-doob-matching-inference-alignment.md  gaussian-interpolation-flows.md  latent-schrodinger-bridge-diffusion.md  m10-m17-leverage-engineering.md  score-based-sequential-langevin-sampling.md  transport-maps-conditional-independence-testing.md  wasserstein-generative-regression.md
wiki/authors/: huang-jian.md  jiao-yuling.md
wiki/directions/: fts-interdiff-fusion.md  unified-conditional-generation-rate.md
wiki/open-problems/: cnf-rate-without-time-singularity.md  minimax-filter-financial-stylised-facts.md
wiki/raw/author/: huang-jian.json  jiao-yuling.json
wiki/techniques/: git-test.md  interpolation-families-parameterization.md  wasserstein-generative-regression-framework.md
