[project]
name = "paper-distiller"
version = "0.5.0"
description = "Distill arxiv research papers into an Obsidian-compatible markdown wiki."
authors = [{name = "jesson-hh", email = "xuyi1030@proton.me"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["obsidian", "research", "arxiv", "knowledge-base", "llm", "distillation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27",
    "arxiv>=2.1",
    "pymupdf>=1.24",
    "python-dotenv>=1.0",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12", "ruff>=0.5"]

[project.scripts]
paper-distiller = "paper_distiller.cli:main"
paper-distiller-qa = "paper_distiller.qa.cli:main"

[project.urls]
Homepage = "https://github.com/jesson-hh/paper-distiller"
Issues = "https://github.com/jesson-hh/paper-distiller/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_distiller"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
