[project]
name = "paper-distiller"
version = "1.12.0"
description = "Chat-first paper distillation: turn arXiv papers into an Obsidian-ready knowledge base."
authors = [{name = "jesson-hh", email = "xuyi1030@proton.me"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "arxiv", "obsidian", "research", "knowledge-base", "llm", "distillation",
    "rag", "semantic-scholar", "oai-pmh", "cli", "agent", "function-calling",
    "mathematics", "papers",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "httpx>=0.27",
    "arxiv>=2.1",
    "pymupdf>=1.24",
    "python-dotenv>=1.0",
    "rich>=13",
    "prompt_toolkit>=3",
    "markdown>=3.5",
    "sickle>=0.7",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12", "pytest-asyncio>=0.23", "ruff>=0.5", "httpx>=0.27"]
compress = ["llmlingua>=0.2"]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]

[project.scripts]
paper-distiller-chat = "paper_distiller.chat.cli:main"
paper-distiller-arxiv = "paper_distiller.arxiv_local.cli:main"
paper-distiller-web = "paper_distiller.web.cli:main"

[project.urls]
Homepage = "https://github.com/jesson-hh/paper-distiller"
Repository = "https://github.com/jesson-hh/paper-distiller"
Documentation = "https://github.com/jesson-hh/paper-distiller#readme"
Changelog = "https://github.com/jesson-hh/paper-distiller/blob/main/CHANGELOG.md"
Issues = "https://github.com/jesson-hh/paper-distiller/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_distiller"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
